
Improvements
- Updated Vietnamese Translations - Credit Shelly and Kitohazu (discord) 
- Updated Spanish translations - Credit Santos (discord)

4.7.2:

Features:
- Added Czech translations - Credit xTomikk

Bug Fixes: 
- Added the missing %betterteams_inTeam% placeholder that was missed in the rework (#480 #479) - Credit AELLIOS (discord)
- Fixed issue with all level placeholders not working as expexpected (#485 #484) - Credit AELLIOS (discord)
- Fixed a memory leak in the SQL storage type (#488 #486) - Credit Dev0Louis (GitHub)
- Fixed some issues with the conversion between YAML and SQL (#481) - Credit AELLIOS (discord)
- Fixed issue with the Vietnamese translations - NOTE: you will need to delete the vi.yml file for this to be updated (#483)
- Improved logging for invalid team files in /team top (#490)
- Improved logging for invalid SQL statements (#478)

4.8.0:

Features:
Added 9 new languages: 
* Arabic - ar - Credit icloser
* Armenian - hy - Credit icloser and ramaziqadagishvili
* Georgian - ka - Credit icloser
* Hindi - hi - Credit icloser and Wonky
* Indonesian - id - Credit icloser
* Japanese - ja - Credit icloser
* Portuguese - pt - Credit icloser
* Russian - ru - Credit icloser
* Ukrainian - uk - Credit kikalo, ramaziqadagishvili and icloser


4.8.1:

Features: 
* Added TeamPreMessageEvent and TeamMessageEvent to the API (#492) - Credit Harieo (GitHub)

4.8.2:

Features:
- Added Dutch language support (#505) - Credit Ceymikey (Discord)
- Added Korean language support (#506) - Credit nyaneo (Discord)

Bug Fixes: 
- Fixed issue causing team names to exist even when they do not exist (#509, #501) - Credit SavageAvocado (GitHub)
- Fixed typo in messages.yml (#503)

4.8.3:

Features:
- Added Romanian translations (#518) - Credit Areanydd

Bug fixes: 
- Improved issues with Dutch translations (#512) - Credit Ceymikey
- Fixed bug causing /team top to incorrectly rank teams (#513)

Headings: 
Features: 

Improvements:

Bug Fixes: 
